# Centernet

./: augment_mosaic.py  best map iou aware ciou mbv2 centernet fe  best_epoch_weights_mbv2_shufflenet_fe_traced.ncnn.param  calc_coco_val.py  centernet.py  centernet_resnet.py  classes.txt  classes_cocomini.txt  converter.py  data_utils.py  dataloader.py  dlamodel.py  gaussan_functions.py  hardnet.py  infer_utils.py  inference.py  loss.py  mixup_.py  mixupaug.py  model.py  ncnn_inference.py  ncnn_sample.py  openvino_quant.py  train.py  train_config.py  utils_bbox.py  utils_fit.py  utils_fit_ciou.py
CenternetPlus/: centernet_plus.py
Centernet_ncnn_cpp/: CMakeLists.txt  classes.txt  main.cpp
configs/mscoco/: mbv4_config.py
detr/: detrmodel.py
lib/core/model/: centernet.py  centernet_psa.py  centernet_psa_mbnet4.py  resnet.py  shufflenet.py
timmodel/: timmodel.py
